[metadata]
name=intersection_control
version=0.1
author=Jules Dehon
description=An environment-agnostic framework for implementing and comparing intersection control algorithms
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/julesdehon/IntersectionControl
license=MIT

[options]
python_requires = >= 3.7
install_requires =
    numpy
    ray >= 1.12
    gym
    Shapely
packages = find:
tests_require =
    matplotlib
    callee

[options.extras_require]
deploy =
    myst-parser
    karma-sphinx-theme

[options.packages.find]
exclude =
    test
    docs
    misc

[flake8]
max-line-length = 120
max-complexity = 10
